@@ -2,6 +2,11 @@ Changelog for plone.fieldsets
 
     (name of developer listed in brackets)
 
+plone.fieldsets - 1.0.1 Unreleased
+
+    - Added tests for the edit and input forms.
+      [hannosch]
+
 plone.fieldsets - 1.0 Released August 13, 2007
 
     - No changes.
